gccida/g1/define_label
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/define_label/src/c-decl.c:3300:61: error: use of undeclared identifier 'stru_634008'
warning_with_file_and_line( filename, line, ( const char *)&stru_634008.block + 88, name->int_cst.int_cst.low); 
                                                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/define_label/src/obj/c-decl.o] Error 1
